--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -147,7 +147,7 @@ m4trace:configure.ac:25: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:25: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:25: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:29: -1- _m4_warn([obsolete], [The macro `AM_CONFIG_HEADER' is obsolete.
-You should run autoupdate.], [aclocal.m4:8802: AM_CONFIG_HEADER is expanded from...
+You should run autoupdate.], [aclocal.m4:9291: AM_CONFIG_HEADER is expanded from...
 configure.ac:29: the top level])
 m4trace:configure.ac:29: -1- AC_CONFIG_HEADERS([config.h])
 m4trace:configure.ac:31: -1- AC_SUBST([LT_RELEASE], [databox_major_version.databox_minor_version.databox_micro_version])
@@ -244,7 +244,7 @@ m4trace:configure.ac:35: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:35: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:35: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.ac:37: -1- _m4_warn([obsolete], [The macro `AM_PROG_LIBTOOL' is obsolete.
-You should run autoupdate.], [aclocal.m4:383: AM_PROG_LIBTOOL is expanded from...
+You should run autoupdate.], [aclocal.m4:394: AM_PROG_LIBTOOL is expanded from...
 configure.ac:37: the top level])
 m4trace:configure.ac:37: -1- LT_INIT
 m4trace:configure.ac:37: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
@@ -392,9 +392,18 @@ m4trace:configure.ac:37: -1- m4_pattern_allow([^OBJDUMP$])
 m4trace:configure.ac:37: -1- AC_SUBST([OBJDUMP])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([OBJDUMP])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^OBJDUMP$])
+m4trace:configure.ac:37: -1- AC_SUBST([DLLTOOL])
+m4trace:configure.ac:37: -1- AC_SUBST_TRACE([DLLTOOL])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^DLLTOOL$])
+m4trace:configure.ac:37: -1- AC_SUBST([DLLTOOL])
+m4trace:configure.ac:37: -1- AC_SUBST_TRACE([DLLTOOL])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^DLLTOOL$])
 m4trace:configure.ac:37: -1- AC_SUBST([AR])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([AR])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^AR$])
+m4trace:configure.ac:37: -1- AC_SUBST([ac_ct_AR])
+m4trace:configure.ac:37: -1- AC_SUBST_TRACE([ac_ct_AR])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^ac_ct_AR$])
 m4trace:configure.ac:37: -1- AC_SUBST([STRIP])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([STRIP])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^STRIP$])
@@ -407,10 +416,10 @@ m4trace:configure.ac:37: -1- m4_pattern_allow([^LT_OBJDIR$])
 m4trace:configure.ac:37: -1- AH_OUTPUT([LT_OBJDIR], [/* Define to the sub-directory in which libtool stores uninstalled libraries.
    */
 @%:@undef LT_OBJDIR])
-m4trace:configure.ac:37: -1- AC_SUBST([lt_ECHO])
-m4trace:configure.ac:37: -1- AC_SUBST_TRACE([lt_ECHO])
-m4trace:configure.ac:37: -1- m4_pattern_allow([^lt_ECHO$])
 m4trace:configure.ac:37: -1- LT_SUPPORTED_TAG([CC])
+m4trace:configure.ac:37: -1- AC_SUBST([MANIFEST_TOOL])
+m4trace:configure.ac:37: -1- AC_SUBST_TRACE([MANIFEST_TOOL])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^MANIFEST_TOOL$])
 m4trace:configure.ac:37: -1- AC_SUBST([DSYMUTIL])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([DSYMUTIL])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^DSYMUTIL$])
@@ -518,11 +527,11 @@ m4trace:configure.ac:47: -1- AC_SUBST([PKG_CONFIG])
 m4trace:configure.ac:47: -1- AC_SUBST_TRACE([PKG_CONFIG])
 m4trace:configure.ac:47: -1- m4_pattern_allow([^PKG_CONFIG$])
 m4trace:configure.ac:47: -1- _m4_warn([obsolete], [The macro `AC_TRY_RUN' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:2752: AC_TRY_RUN is expanded from...
+You should run autoupdate.], [../../lib/autoconf/general.m4:2765: AC_TRY_RUN is expanded from...
 aclocal.m4:29: AM_PATH_GTK_2_0 is expanded from...
 configure.ac:47: the top level])
 m4trace:configure.ac:47: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:2675: AC_TRY_LINK is expanded from...
+You should run autoupdate.], [../../lib/autoconf/general.m4:2688: AC_TRY_LINK is expanded from...
 aclocal.m4:29: AM_PATH_GTK_2_0 is expanded from...
 configure.ac:47: the top level])
 m4trace:configure.ac:47: -1- AC_SUBST([GTK_CFLAGS])
@@ -532,7 +541,8 @@ m4trace:configure.ac:47: -1- AC_SUBST([GTK_LIBS])
 m4trace:configure.ac:47: -1- AC_SUBST_TRACE([GTK_LIBS])
 m4trace:configure.ac:47: -1- m4_pattern_allow([^GTK_LIBS$])
 m4trace:configure.ac:48: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
-m4trace:configure.ac:48: -1- m4_pattern_allow([^PKG_CONFIG(_PATH)?$])
+m4trace:configure.ac:48: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
+m4trace:configure.ac:48: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
 m4trace:configure.ac:48: -1- AC_SUBST([PKG_CONFIG])
 m4trace:configure.ac:48: -1- AC_SUBST_TRACE([PKG_CONFIG])
 m4trace:configure.ac:48: -1- m4_pattern_allow([^PKG_CONFIG$])
@@ -649,6 +659,12 @@ m4trace:configure.ac:112: -1- m4_pattern_allow([^GTKDOC_MKPDF$])
 m4trace:configure.ac:112: -1- AC_SUBST([HTML_DIR])
 m4trace:configure.ac:112: -1- AC_SUBST_TRACE([HTML_DIR])
 m4trace:configure.ac:112: -1- m4_pattern_allow([^HTML_DIR$])
+m4trace:configure.ac:112: -1- AC_SUBST([GTKDOC_DEPS_CFLAGS])
+m4trace:configure.ac:112: -1- AC_SUBST_TRACE([GTKDOC_DEPS_CFLAGS])
+m4trace:configure.ac:112: -1- m4_pattern_allow([^GTKDOC_DEPS_CFLAGS$])
+m4trace:configure.ac:112: -1- AC_SUBST([GTKDOC_DEPS_LIBS])
+m4trace:configure.ac:112: -1- AC_SUBST_TRACE([GTKDOC_DEPS_LIBS])
+m4trace:configure.ac:112: -1- m4_pattern_allow([^GTKDOC_DEPS_LIBS$])
 m4trace:configure.ac:112: -1- AM_CONDITIONAL([ENABLE_GTK_DOC], [test x$enable_gtk_doc = xyes])
 m4trace:configure.ac:112: -1- AC_SUBST([ENABLE_GTK_DOC_TRUE])
 m4trace:configure.ac:112: -1- AC_SUBST_TRACE([ENABLE_GTK_DOC_TRUE])
