--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-11-8 (0.9.2.0)
-   - There has been a huge amount of change since the last release... 
+   - There has been a huge amount of change since the last release...
+	There are many new graphing methods, such as offset bars, region plots.
+	There are a large number of enhancements to ruler displays including
+	various methods to shift tick marks, set manual labels and many many 
+	other options. Have a look at the examples for rulers, and basics2
+	
 	here is the git log ...
 	commit 49b41abef695f416846c56b675627156ecf19e9d
 	Author: Matt Flax <flatmax@monstilationax.(none)>
